[package]
name = "uart8250"
version = "0.5.0"
edition = "2018"
authors = ["Campbell He (duskmoon)"]
license = "MIT"
keywords = ["uart"]
categories = ["embedded"]
description = "This crate provide a struct with many methods to operate uart 8250."
homepage = "https://github.com/duskmoon314/uart-rs"
repository = "https://github.com/duskmoon314/uart-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
embedded-hal = { version = "0.2.7", optional = true }
nb = { version = "1.0.0", optional = true }
tock-registers = "0.7.0"

[features]
default = []
embedded = ["embedded-hal", "nb"]
fmt = []
