[package]
name = "uart_sifive"
version = "0.0.0"
edition = "2024"
authors = ["Woshiluo Luo"]
license = "MIT"
keywords = ["uart"]
categories = ["embedded"]
description = "This crate provide a struct with many methods to operate uarts in Sifive UART"
homepage = "https://github.com/duskmoon314/uart-rs"
repository = "https://github.com/duskmoon314/uart-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
volatile-register = "0.2"

[features]
default = []
